# jobs

./: .bazelrc  .bazelrc.back  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  build.gradle  docker-compose.yml  gradlew  maven_install.json  pom.xml  settings.gradle
.github/workflows/: ci.yaml
src/main/java/org/daming/jobs/: JobsApplication.java
src/main/java/org/daming/jobs/api/advice/: DamingExceptionHandler.java
src/main/java/org/daming/jobs/api/controller/: ApiController.java  JobController.java  PongController.java  RepoController.java  TokenController.java
src/main/java/org/daming/jobs/api/interceptor/: ControllerInterceptor.java
src/main/java/org/daming/jobs/base/: DamingContext.java
src/main/java/org/daming/jobs/base/annotations/: JobComponent.java  JobComponentScan.java
src/main/java/org/daming/jobs/base/constant/: CommonConstant.java  ErrorCodeConstant.java
src/main/java/org/daming/jobs/base/context/: ThreadLocalContextHolder.java
src/main/java/org/daming/jobs/base/exceptions/: DamingException.java  ExceptionBuilder.java
src/main/java/org/daming/jobs/base/logger/: DamingLogger.java  LoggerManager.java
src/main/java/org/daming/jobs/base/registrar/: JobComponentScannerRegistrar.java
src/main/java/org/daming/jobs/base/sanner/: FindJobComponentScanHandle.java
src/main/java/org/daming/jobs/base/shiro/: JWTFilter.java  JWTToken.java  ShiroUserService.java  UserBean.java
src/main/java/org/daming/jobs/base/shiro/realm/: UserRealm.java
src/main/java/org/daming/jobs/base/support/: YamlPropertySourceFactory.java
src/main/java/org/daming/jobs/base/token/: UserToken.java
src/main/java/org/daming/jobs/base/utils/: CommonUtils.java  JWTUtil.java  JwtTool.java  Md5.java
src/main/java/org/daming/jobs/config/: OpenApiConfig.java  ShiroConfig.java  SwaggerConfig.java
src/main/java/org/daming/jobs/config/prop/: ErrorProp.java  TokenProp.java
src/main/java/org/daming/jobs/config/service/: IErrorCodeService.java  ITokenConfigService.java
src/main/java/org/daming/jobs/config/service/impl/: ErrorCodeServiceImpl.java  TokenConfigServiceImpl.java
src/main/java/org/daming/jobs/pojo/: ApiError.java  JobInfo.java  User.java
src/main/java/org/daming/jobs/pojo/request/: AddJobRequest.java  DeleteJobRequest.java  PauseResumeJobRequest.java
src/main/java/org/daming/jobs/repository/: IUserRepository.java
src/main/java/org/daming/jobs/service/: IQuartzService.java  IRepoService.java  IShiroUserService.java  ITokenService.java
src/main/java/org/daming/jobs/service/impl/: QuartzServiceImpl.java  RepoServiceImpl.java  ShiroUserServiceImpl.java  TokenServiceImpl.java
src/main/java/org/daming/jobs/task/: HelloTask.java  StartTask.java
src/main/java/org/daming/jobs/web/: ApiController.java  PongController.java
src/main/react/: .babelrc  .editorconfig  .eslintrc.json  .prettierrc.json  README.md  index.html  jest.config.js  package.json  tsconfig.json  vite.config.ts  webpack.config.js
src/main/react/src/: app.js  app.tsx  custom.d.ts  index.jsx  styles.scss  vite-end.d.ts
src/main/react/src/components/: appBar.ts  drawer.ts  flex.tsx  index.ts  items.tsx  nav.tsx  themeModePicker.tsx  title.tsx  userMenu.tsx
src/main/react/src/layout/: adminLayout.tsx  index.js  index.ts  index.tsx  primary-layout.js  primary-layout.tsx  primaryLayout.tsx
src/main/react/src/lib/: api.ts
src/main/react/src/model/: job.ts
src/main/react/src/pages/: home.tsx  index.ts  index.tsx  login.tsx  repos.tsx  route.ts
src/main/react/src/route/: home.js  home.tsx  index.js  index.ts  login.tsx  repos.js  repos.tsx
src/main/react/src/service/: api.js  api.ts
src/main/react/src/shared/: content.js  index.js  nav.js  nav.tsx
src/main/react/src/slices/: job.ts  login.ts  repos.ts  store.ts  theme.ts
src/main/react/src/types/: request-status.ts  respo.ts  theme.ts  token.ts
src/main/react/test/: app.test.js  app.test.tsx  enzyme.setup.js
src/main/resources/: application.yml  errors.yml  logback-spring.xml
src/test/java/org/daming/jobs/: JobsApplicationTests.java
src/test/java/org/daming/jobs/base/utils/: JwtToolTest.java
src/test/java/org/daming/jobs/config/prop/: ErrorPropTest.java  TokenPropTest.java
src/test/java/org/daming/jobs/config/service/: IErrorCodeServiceTest.java  ITokenConfigServiceTest.java
src/test/java/org/daming/jobs/service/: IQuartzServiceTest.java
src/test/java/org/daming/jobs/service/impl/: RepoServiceImplTest.java
